# tiny-health-checker

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
src/: args.rs  commands.rs  lib.rs
