[package]
name = "tiny-health-checker"
version = "0.39.0"
edition = "2024"
authors = ["Daniel Mikusa <dan@mikusa.com>"]
description = "A tiny health checker for use in containers with Docker health checks"
repository = "https://github.com/dmikusa/tiny-health-checker"

[dependencies.ureq]
version = "3.1"
default-features = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
opt-level = "s"
strip = "symbols"

[dev-dependencies]
temp-env = "0.3"
httpmock = "0.8"
